# ChangeLog for net-nds/openldap
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-nds/openldap/ChangeLog,v 1.201 2006/09/27 03:47:53 tsunam Exp $

  19 Sep 2006; Joshua Jackson <tsunam@gentoo.org> openldap-2.3.27.ebuild:
  Stable x86; bug #144862

  18 Sep 2006; Benjamin Smee <strerror@gentoo.org>
  openldap-2.3.24-r2.ebuild:
  small fix for .24-r2 ebuild

*openldap-2.3.27 (18 Sep 2006)

  18 Sep 2006; Benjamin Smee <strerror@gentoo.org> +openldap-2.3.27.ebuild:
  Version bump

  11 Sep 2006; Markus Ullmann <jokey@gentoo.org> openldap-2.1.30-r7.ebuild,
  openldap-2.2.28-r4.ebuild, openldap-2.3.21.ebuild,
  openldap-2.3.21-r1.ebuild, openldap-2.3.23.ebuild,
  openldap-2.3.24-r1.ebuild, openldap-2.3.24-r2.ebuild:
  Fixing built_with_use checks for non-existant IUSE ( bug #147134 ) and merge
  failure with minimal useflag on first installation ( bug #143473 )

  05 Sep 2006; Joshua Kinard <kumba@gentoo.org> openldap-2.3.24-r1.ebuild:
  Marked stable on mips.

  16 Jun 2006; Markus Ullmann <jokey@gentoo.org> openldap-2.3.24-r1.ebuild,
  openldap-2.3.24-r2.ebuild:
  Minor fix on migration howto wrt bug #136863 and arm love

  15 Jun 2006; Markus Ullmann <jokey@gentoo.org> openldap-2.3.24-r1.ebuild:
  Minor fix for populated tree detection, thanks to cardoe on #gentoo-dev for
  troubleshooting it

  12 Jun 2006; Markus Rothe <corsair@gentoo.org> openldap-2.3.24-r1.ebuild:
  Stable on ppc64

  11 Jun 2006; Joshua Jackson <tsunam@gentoo.org> openldap-2.3.24-r1.ebuild:
  stable on x86; security bug #134010

  05 Jun 2006; Jason Wever <weeve@gentoo.org> openldap-2.3.24-r1.ebuild:
  Stable on SPARC wrt security bug #134010.

  04 Jun 2006; Thomas Cort <tcort@gentoo.org> openldap-2.3.24-r1.ebuild:
  Stable on amd64 wrt security Bug #134010.

  04 Jun 2006; Thomas Cort <tcort@gentoo.org> openldap-2.3.24-r1.ebuild:
  Stable on alpha wrt security Bug #134010.

  04 Jun 2006; Rene Nussbaumer <killerfox@gentoo.org>