@@ -1,0 +1,3 @@
+MD5 0fbae4e9279aaa586adcd9f19b66a5ed openldap-2.3.27.tgz 3757519
+RMD160 8c25c39689daa515f14e88611490ae6d8df0911c openldap-2.3.27.tgz 3757519
+SHA256 6ddf211d65aa62bb2165a612f96545d5dc8baf01d269e0f7945ebe066c282ed7 openldap-2.3.27.tgz 3757519
